--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "jest": "^24.8.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.17.6",
     "pg": "^7.11.0",
-    "sqlite3": "^4.0.9"
+    "sqlite3": "^4.0.9",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
